<?xml version="1.0" encoding="utf-8"?>
<com.seeker.libraries.weight.ElasticNestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin"
    android:overScrollMode="never">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.seeker.libraries.weight.SetItemView
            android:id="@+id/setItemViewDemo"
            android:background="@drawable/background_view_rounded_top"
            style="@style/SetItemStyleBase"
            app:textStart="@string/SetItemView"/>

        <com.seeker.libraries.weight.SetItemView
            android:id="@+id/finalRecycleDemo"
            style="@style/SetItemStyleMiddle"
            app:textStart="@string/FinalRecycleView"/>
        <com.seeker.libraries.weight.SetItemView
            android:id="@+id/okhttpDemo"
            style="@style/SetItemStyleMiddle"
            app:textStart="@string/OKHttpManger"/>
        <com.seeker.libraries.weight.SetItemView
            android:id="@+id/cropImageDemo"
            style="@style/SetItemStyleMiddle"
            app:textStart="@string/CropImageView"/>
        <com.seeker.libraries.weight.SetItemView
            android:id="@+id/libDialogFragmentDemo"
            style="@style/SetItemStyleMiddle"
            app:textStart="@string/LibDialogFragment"/>
        <com.seeker.libraries.weight.SetItemView
            android:id="@+id/waitAdd3"
            style="@style/SetItemStyleMiddle"
            app:textStart="Wait Add..."/>
        <com.seeker.libraries.weight.SetItemView
            android:id="@+id/waitAdd4"
            style="@style/SetItemStyleMiddle"
            app:textStart="Wait Add..."/>
        <com.seeker.libraries.weight.SetItemView
            android:id="@+id/waitAdd5"
            style="@style/SetItemStyleMiddle"
            app:textStart="Wait Add..."/>
        <com.seeker.libraries.weight.SetItemView
            android:id="@+id/waitAdd6"
            style="@style/SetItemStyleMiddle"
            app:textStart="Wait Add..."/>
        <com.seeker.libraries.weight.SetItemView
            android:id="@+id/waitAdd7"
            style="@style/SetItemStyleMiddle"
            app:textStart="Wait Add..."/>
        <com.seeker.libraries.weight.SetItemView
            android:id="@+id/waitAdd8"
            android:background="@drawable/background_view_rounded_bottom"
            style="@style/SetItemStyleBase"
            app:textStart="Wait Add..."/>
    </TableLayout>
</com.seeker.libraries.weight.ElasticNestedScrollView>
